added section component

--- a/Week-1/assignment-2/index.html
+++ b/Week-1/assignment-2/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="parent-container">
         <div class="layout-container">
-            <div class="songs-playboard">
+            <section class="songs-playboard">
                 
                 <div class="navigator">
                     <i class="las la-bars"></i>
@@ -82,7 +82,7 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
+            </section>
 
             <div class="footer-playbox">
                 <div class="song-favicon">
