added basic scss and mixins

--- a/Week-2/assignment-1/index.html
+++ b/Week-2/assignment-1/index.html
@@ -28,33 +28,79 @@
                                 alt="home-img" />
                         </section>
                         <section class="box2">
-                            <div>
+                            <article>
                                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero deleniti iusto, minus
                                     omnis delectus, accusantium, soluta sunt corporis ipsa est laudantium ipsum iure quia
                                     perspiciatis? Repellendus mollitia quibusdam reprehenderit ut.</p>
                                 <a href="www.google.com">Link</a>
-                            </div>
-                            <div>
+                            </article>
+                            <article>
                                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero deleniti iusto, minus
                                     omnis delectus, accusantium, soluta sunt corporis ipsa est laudantium ipsum iure quia
                                     perspiciatis? Repellendus mollitia quibusdam reprehenderit ut.</p>
                                     <a href="www.google.com">Link</a>
-                            </div>
-                            <div>
+                            </article>
+                            <article>
                                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero deleniti iusto, minus
                                     omnis delectus, accusantium, soluta sunt corporis ipsa est laudantium ipsum iure quia
                                     perspiciatis? Repellendus mollitia quibusdam reprehenderit ut.</p>
                                     <a href="www.google.com">Link</a>
-                            </div>
+                            </article>
                         </section>
                     </div>
             </section>
 
-            
 
+            <section class="form-container">
+                <form action="" onsubmit="">
+                    <label for="title">Title
+
+                        <span>
+                            Mr <input type="radio" name="title" value="Mr">
+                            Mrs <input type="radio" name="title" value="Mrs">
+                            Miss <input type="radio" name="title" value="Miss">
+                        </span>
+
+                    </label>
+
+                    <label for="firstname">
+                        First Name <input type="text" id="firstname" name="firstname" required="true">
+                    </label>
+                    <label for="lastname">
+                        Last Name <input type="text" id="lastname" name="lastname" required="true">
+                    </label>
+
+                    <label for="email">
+                        Email <input type="email" id="email" name="email" required="true">
+                    </label>
+
+                    <label for="phonenumber">
+                        Phone Number <input type="text" id="phonenumber" name="phonenumber" required="true">
+                    </label>
+
+                    <label for="password">
+                        Password <input type="password" id="password" name="password" required="true">
+                    </label>
+
+                    <label for="cpassword">
+                        Confirm Password <input type="password" id="cpassword" name="cpassword" required="true">
+                    </label>
+
+                    <label for="country">
+                        Country <input type="text" id="country" name="country" required="true">
+                    </label>
+
+                    <p class="terms">
+                        <input type="checkbox" required="true">
+                        <a href="www.google.com">Terms & Conditions</a>
+                    </p>
+
+                    <input type="submit" value="Submit">
+                </form>
+            </section>
         </div>
     </main>
 </body>
