added footer and articles

--- a/Week-2/assignment-1/index.html
+++ b/Week-2/assignment-1/index.html
@@ -103,6 +103,20 @@
             </section>
         </div>
     </main>
+    <footer class="footer-container">
+        <div class="footer-layout">
+            <div class="footer-box">
+                <h1>Mystay Homes</h1>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatum accusamus in,
+                    adipisci veritatis fugit expedita quia itaque illum beatae vel alias eaque, aspernatur ex
+                    reiciendis, eum iste voluptates suscipit?
+                </p>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
