added media queries assign1

--- a/Week-2/assignment-1/index.html
+++ b/Week-2/assignment-1/index.html
@@ -90,8 +90,18 @@
                     </label>
 
                     <label for="country">
-                        Country <input type="text" id="country" name="country" required="true">
+                        Country  <select name="pets" id="pet-select">
+                            <option value="india">India</option>
+                            <option value="canada">Canada</option>
+                            <option value="us">USA</option>
+                            <option value="australia">Australia</option>
+                            <option value="thailand">Thailand</option>
+                            <option value="spider">Iceland</option>
+                            <option value="goldfish">United Kingdom</option>
+                        </select>
                     </label>
+                   
+                    
 
                     <p class="terms">
                         <input type="checkbox" required="true">
