added sections for parent container

--- a/Week-1/assignment-2/index.html
+++ b/Week-1/assignment-2/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="parent-container">
-        <div class="layout-container">
+    <section class="parent-container">
+        <section class="layout-container">
             <section class="songs-playboard">
                 
                 <div class="navigator">
@@ -101,8 +101,8 @@
                     <i class="las la-random"></i>
                 </div>
             </div>
-        </div>
-    </div>
+        </section>
+    </section>
 </body>
 
 </html>
