fixed phone num length, and password length

--- a/Week-2/assignment-1/index.html
+++ b/Week-2/assignment-1/index.html
@@ -78,15 +78,15 @@
                     </label>
 
                     <label for="phonenumber">
-                        Phone Number <input type="text" id="phonenumber" name="phonenumber" required="true">
+                        Phone Number <input type="tel" id="phonenumber" name="phonenumber" required="true" min="10" max="10">
                     </label>
 
                     <label for="password">
-                        Password <input type="password" id="password" name="password" required="true">
+                        Password <input type="password" id="password" name="password" required="true" min="6">
                     </label>
 
                     <label for="cpassword">
-                        Confirm Password <input type="password" id="cpassword" name="cpassword" required="true">
+                        Confirm Password <input type="password" id="cpassword" name="cpassword" required="true" min="6">
                     </label>
 
                     <label for="country">
@@ -128,5 +128,4 @@
         </div>
     </footer>
 </body>
-
 </html>
